# success-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
src/: main.rs
success-core/: Cargo.toml
success-core/src/: app.rs  handlers.rs  key_event.rs  lib.rs  notes.rs  style.rs  timer.rs  types.rs  ui.rs  utils.rs
success-web/: Cargo.toml  index.html
success-web/src/: main.rs
