[package]
name = "success-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for achieving goals"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
crossterm = "0.27"
ratatui = "0.26"
serde_yaml = "0.9"
fuzzy-matcher = "0.3"
libc = "0.2"
successlib = { path = "../success-lib" }
