[package]
name = "success-cli"
version = "0.4.0"
edition = "2021"
description = "CLI for achieving goals"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28"
ratatui = "0.30"
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
success-core = { path = "success-core" }
successlib = { git = "https://github.com/Calonca/success-lib", branch = "v0.5.x" }
