[package]
name = "success-core"
version = "0.1.0"
edition = "2021"
description = "Shared core for success-cli and success-web"

[features]
default = []
web = []

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["all-widgets"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
successlib = { git = "https://github.com/Calonca/success-lib", branch = "v0.5.x" }
